--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "@graphql-codegen/typescript-resolvers": "2.0.0",
     "@graphql-tools/schema": "^8.1.1",
     "@graphql-tools/utils": "^8.1.1",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.172",
     "nodemon": "^2.0.12",
@@ -22,6 +23,7 @@
   "dependencies": {
     "@types/uuid": "^8.3.1",
     "apollo-server-express": "^3.1.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "graphql-import-node": "^0.0.4",
