--- a/server/package.json
+++ b/server/package.json
@@ -22,12 +22,17 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.1",
-    "apollo-server-express": "^3.1.2",
+    "@types/ws": "^7.4.7",
+    "apollo-server-express": "^2.25.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "graphql-import-node": "^0.0.4",
+    "graphql-subscriptions": "^1.2.1",
+    "graphql-ws": "^5.4.0",
     "lodas": "^1.2.0",
-    "uuid": "^8.3.2"
+    "subscriptions-transport-ws": "^0.9.19",
+    "uuid": "^8.3.2",
+    "ws": "^8.2.0"
   }
 }
