--- a/client/codegen.yml
+++ b/client/codegen.yml
@@ -1,6 +1,6 @@
 overwrite: true
 schema: "http://localhost:4000/graphql"
-documents: "./src/components/**/*.{ts,tsx}"
+documents: "./src/{components,pages}/**/*.{ts,tsx}"
 generates:
   src/generated/graphql.tsx:
     plugins:
