--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@apollo/client": "^3.4.8",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
     "firebase": "^8.10.0",
@@ -52,6 +52,7 @@
     "@graphql-codegen/cli": "2.0.1",
     "@graphql-codegen/typescript": "2.0.0",
     "@graphql-codegen/typescript-operations": "2.0.1",
-    "@graphql-codegen/typescript-react-apollo": "3.0.0"
+    "@graphql-codegen/typescript-react-apollo": "3.0.0",
+    "@types/testing-library__react": "^10.2.0"
   }
 }
